# LLM-Powered-Fact-Checker

./: .gitignore  LICENSE  Plan.pptx  README.md  app.py  backend_basic_testing_scripts.py  main.py  pyproject.toml  requirements.txt
artifacts/: verified_facts.csv
src/fact_checker/: __init__.py
src/fact_checker/components/: __init__.py  data_ingestion.py  fact_checking.py
src/fact_checker/config/: __init__.py
src/fact_checker/config/builder/: __init__.py
src/fact_checker/config/raw/: config.yaml
src/fact_checker/constants/: __init__.py
src/fact_checker/entity/: __init__.py
src/fact_checker/exception/: __init__.py
src/fact_checker/logger/: __init__.py
src/fact_checker/pipeline/: __init__.py  data_ingestion.py  fact_checking.py
src/fact_checker/utils/: __init__.py
