[project]
name = "llm-powered-fact-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "beautifulsoup4>=4.14.3",
 "chromadb>=1.4.0",
 "fastapi>=0.128.0",
 "feedparser>=6.0.12",
 "httpx>=0.28.1",
 "ipykernel>=7.1.0",
 "pandas>=2.3.3",
 "pydantic>=2.12.5",
 "python-box>=7.3.2",
 "python-dotenv>=1.2.1",
 "pyyaml>=6.0.3",
 "requests>=2.32.5",
 "sentence-transformers>=5.2.0",
 "streamlit>=1.52.2",
 "toml>=0.10.2",
 "torch>=2.9.1",
 "transformers>=4.57.5",
 "uvicorn>=0.40.0",
]

[build-system]
requires = [ "hatchling >= 1.27.0",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [ "src/fact_checker",]
